--- a/package.xml
+++ b/package.xml
@@ -20,5 +20,6 @@
 
   <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>
+  <build_depend>cmake_modules</build_depend>
   
 </package>
